# hw_docker

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scholl.json  school.json
config/: settings.py  urls.py
payment/: models.py  serializers.py  services.py  urls.py  views.py
payment/management/commands/: fill_pay.py
payment/migrations/: 0001_initial.py  0002_initial.py  0002_remove_payment_obj_paid_payment_course_and_more.py  0003_alter_payment_course_alter_payment_lesson.py  0003_initial.py  0004_alter_payment_options.py  0004_payment_customer_email_payment_status_and_more.py  0005_alter_payment_stripe_id_alter_payment_uid.py  0006_alter_payment_status.py
school/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
school/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0002_initial.py  0003_subscription.py  0004_course_price_lesson_price.py  0005_rename_course_description_course_description_and_more.py
tests/: tests_school.py
users/: middleware.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: fill_usr.py
users/migrations/: 0001_initial.py
