[tool.poetry]
name = "hw-drf"
version = "0.1.0"
description = ""
authors = ["Denis_L <denis88lyapin@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
djangorestframework = "^3.14.0"
pillow = "^10.0.1"
django-filter = "^23.3"
djangorestframework-simplejwt = "^5.3.0"
django-extensions = "^3.2.3"
drf-yasg = "^1.21.7"
stripe = "^6.7.0"
requests = "^2.31.0"
celery = "^5.3.4"
redis = "^5.0.1"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
